Fix remaining buffering display icon jump in position

--- a/src/css/flags/time-slider-above.less
+++ b/src/css/flags/time-slider-above.less
@@ -58,6 +58,7 @@ of the file to be defined separately.
   &.jw-breakpoint-0 {
 
     &.jw-state-paused,
+    &.jw-state-buffering,
     &.jw-state-playing:not(.jw-flag-user-inactive) {
 
       // add padding to top that equals height of dock icons if the video is not in aspect mode
